# midas_file_nearline_app

./: CMakeLists.txt  README.md
cmake/: CPMConfig.cmake
config/modes/: default.json
scripts/: run.sh
scripts/draw_pipeline/: pipeline_diagram  render_pipeline_diagram.py
src/: main.cpp
